[cpp] Add build configuration execution
Make the cpp extension provide tasks based on the build provided build-configs.
Add cpp-specific variables that need some context to run.
Allow variables to access some context in order to resolve correctly.
Add `ctrl+b` shortcut to build the active configuration.

Signed-off-by: Paul Maréchal <paul.marechal@ericsson.com>

--- a/packages/cpp/package.json
+++ b/packages/cpp/package.json
@@ -9,17 +9,16 @@
     "@theia/languages": "^0.3.14",
     "@theia/monaco": "^0.3.14",
     "@theia/preferences": "^0.3.14",
-    "@theia/process": "^0.3.14"
+    "@theia/process": "^0.3.14",
+    "string-argv": "^0.1.1"
   },
   "publishConfig": {
     "access": "public"
   },
-  "theiaExtensions": [
-    {
-      "frontend": "lib/browser/cpp-frontend-module",
-      "backend": "lib/node/cpp-backend-module"
-    }
-  ],
+  "theiaExtensions": [{
+    "frontend": "lib/browser/cpp-frontend-module",
+    "backend": "lib/node/cpp-backend-module"
+  }],
   "keywords": [
     "theia-extension"
   ],
